frontend/test/should_fail/array_max.grg
function max(ref a:array<string>) : double
{
	return(a.max());
}